--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,6 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: assertive.strings_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/assertive.strings_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/assertive.strings/assertive.strings_{{ version }}.tar.gz
@@ -42,20 +41,15 @@ test:
 
 about:
   home: https://bitbucket.org/richierocks/assertive.strings
-  license: GPL (>= 3)
+  license: GPL-3.0-or-later
   summary: A set of predicates and assertions for checking the properties of strings.  This is
     mainly for use by other package developers who want to include run-time testing
     features in their own packages.  End-users will usually want to use assertive directly.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
     - jenzopr
